refactor: Consent 관련 리팩토링 / #49 (#50)
* refactor: Consent 도메인 내 externalUserId -> userId 변환 및 코드 리팩토

* refactor: Consent 도메인 리팩토링에 따른 쿼리 수정

* test: Consent 리팩토링에 의한 테스트 코드 수정

* refactor: 불필요한 Join Fetch가 적용된 쿼리 수정

* chore: 메서드명 및 javadocs 수정

* refactor: 사용자 동의 철회시 definitionId가 아닌 동의서 code를 통해 요청하도록 수정

* chore: PathVariable 변수명 일관성을 위한 수정