@@ -2,10 +2,8 @@ package org.creditto.creditto_service.domain.consent.service;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.creditto.creditto_service.domain.consent.dto.ConsentAgreeReq;
 import org.creditto.creditto_service.domain.consent.dto.ConsentDefinitionRes;
 import org.creditto.creditto_service.domain.consent.dto.ConsentRecordRes;
-import org.creditto.creditto_service.domain.consent.dto.ConsentWithdrawReq;
 import org.creditto.creditto_service.domain.consent.entity.ConsentDefinition;
 import org.creditto.creditto_service.domain.consent.entity.ConsentRecord;
 import org.creditto.creditto_service.domain.consent.entity.ConsentStatus;
@@ -13,12 +11,10 @@ import org.creditto.creditto_service.domain.consent.repository.ConsentDefinition
 import org.creditto.creditto_service.domain.consent.repository.ConsentRecordRepository;
 import org.creditto.creditto_service.global.response.error.ErrorBaseCode;
 import org.creditto.creditto_service.global.response.exception.CustomBaseException;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+
 /**
  * 동의서 관련 비즈니스 로직을 처리하는 서비스 클래스입니다.
  */
@@ -29,47 +25,44 @@ public class ConsentService {
     private final ConsentDefinitionRepository definitionRepository;
     private final ConsentRecordRepository recordRepository;
 
-
     /**
      * 사용자의 동의를 기록
-     *
-     * @param req 동의 요청 정보 (동의 코드, IP 주소, 클라이언트 ID)
-     * @return 생성된 동의 기록 정보
-     * @throws CustomBaseException 해당 동의 코드의 최신 동의서 정의를 찾을 수 없을 때 발생
+     * @param userId 동의한 userId
+     * @param consentCode 동의 코드
+     * @return ConsentRecordRes 생성된 동의 기록 정보
      */
     @Transactional
-    public ConsentRecordRes agree(ConsentAgreeReq req) {
+    public ConsentRecordRes agree(Long userId, String consentCode) {
 
-        ConsentDefinition latestDefinition = getLatestDefinition(req.consentCode());
+        ConsentDefinition latestDefinition = getLatestDefinition(consentCode);
 
-        ConsentRecord newRecord = ConsentRecord.of(
-                latestDefinition,
-                req.ipAddress(),
-                req.clientId()
-        );
+        ConsentRecord consentRecord = recordRepository
+                .findFirstByUserIdAndConsentDefinitionIdAndConsentStatusOrderByConsentDateDesc(
+                        userId, latestDefinition.getId(), ConsentStatus.AGREE
+                )
+                .orElseGet(() -> {
+                    ConsentRecord newRecord = ConsentRecord.of(latestDefinition, userId);
+                    return recordRepository.save(newRecord);
+                });
 
-        recordRepository.save(newRecord);
-
-        return ConsentRecordRes.from(newRecord);
+        return ConsentRecordRes.from(consentRecord);
     }
 
     /**
      * 사용자의 동의를 철회
-     *
-     * @param req 동의 철회 요청 정보 (클라이언트 ID, 동의서 정의 ID)
-     * @return 철회 처리된 동의 기록 정보
+     * @param userId 철회할 userId
+     * @param consentCode 철회할 동의서 코드
      * @throws CustomBaseException 철회할 동의 기록을 찾을 수 없을 때 발생
      */
     @Transactional
-    public ConsentRecordRes withdraw(ConsentWithdrawReq req) {
-
-        List<ConsentRecord> records = recordRepository.findLatestByClientAndDefinitionWithDefinition(req.clientId(), req.definitionId(), PageRequest.of(0, 1));
-        ConsentRecord findRecord = records.stream().findFirst()
-                .orElseThrow(() -> new CustomBaseException(ErrorBaseCode.NOT_FOUND_RECORD));
+    public void withdraw(Long userId, String consentCode) {
+        ConsentRecord findRecord = recordRepository.findFirstByUserIdAndCodeAndStatus(
+                userId, consentCode, ConsentStatus.AGREE
+        ).orElseThrow(
+                () -> new CustomBaseException(ErrorBaseCode.NOT_FOUND_RECORD)
+        );
 
         findRecord.withdraw();
-
-        return ConsentRecordRes.from(findRecord);
     }
 
     /**
@@ -80,7 +73,7 @@ public class ConsentService {
     public List<ConsentDefinitionRes> getLatestConsentDefinitions() {
         return definitionRepository.findLatestForAllCodes().stream()
                 .map(ConsentDefinitionRes::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 특정 코드의 동의서 최신 버전 조회
@@ -91,25 +84,22 @@ public class ConsentService {
 
     /**
      * 특정 사용자의 전체 동의 기록을 조회
-     * N+1 문제를 방지하기 위해 Fetch Join을 사용
-     *
-     * @param clientId 클라이언트 ID
-     * @return 해당 사용자의 전체 동의 기록 목록
+     * @param userId 조회할 userId
+     * @return 동의한 동의서 list
      */
-    public List<ConsentRecordRes> getConsentRecord(String clientId) {
-        return recordRepository.findAllByClientIdWithDefinition(clientId).stream()
+    public List<ConsentRecordRes> getConsentRecord(Long userId) {
+        return recordRepository.findAllByUserIdWithDefinition(userId).stream()
                 .map(ConsentRecordRes::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * 특정 사용자가 특정 동의 코드의 최신 버전에 동의했는지 확인
-     *
-     * @param clientId 클라이언트 ID
-     * @param code 동의 코드
-     * @return 최신 버전에 동의한 경우 true, 그렇지 않으면 false
+     * @param userId 조회할 userId
+     * @param code 조회할 동의서 code
+     * @return 동의 여부
      */
-    public boolean checkAgreement(String clientId, String code) {
-        return recordRepository.existsLatestAgreement(clientId, code);
+    public boolean checkAgreement(Long userId, String code) {
+        return recordRepository.existsLatestAgreement(userId, code, ConsentStatus.AGREE);
     }
 }
